--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "styles-loader": "^3.0.0",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
