--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "babel-loader": "^8.2.4",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "react-refresh": "^0.12.0",
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
     "styles-loader": "^3.0.0",
