--- a/ignews/package.json
+++ b/ignews/package.json
@@ -6,14 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^6.4.3",
+    "@prismicio/helpers": "^2.3.0",
+    "@prismicio/next": "^0.1.2",
+    "@prismicio/react": "^2.3.0",
+    "@prismicio/slice-simulator-react": "^0.2.2",
     "@stripe/stripe-js": "^1.27.0",
     "axios": "^0.26.1",
     "faunadb": "^4.5.4",
     "next": "12.1.4",
     "next-auth": "^4.3.1",
+    "prismic-dom": "^2.2.7",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
@@ -23,9 +30,11 @@
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.23",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.43",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
+    "slice-machine-ui": "^0.3.7",
     "typescript": "^4.6.3"
   }
 }
