--- a/design-system/packages/react/package.json
+++ b/design-system/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/tokens",
+  "name": "@ignite-ui/react",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@ignite-ui/ts-config": "*",
     "@ignite-ui/eslint-config": "*",
+    "@ignite-ui/tokens": "*",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3"
   }
